# tasbot_eyes

./: .gitignore  .gitmodules  README.md
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/auto/: charter.md  history.md
.squad/agents/dr-light/: charter.md  history.md
.squad/agents/mega-man/: charter.md  history.md
.squad/agents/proto-man/: charter.md  history.md
.squad/agents/roll/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/skills/bootsel-flash-verification/: SKILL.md
.squad/skills/bootsel-window-flash/: SKILL.md
.squad/skills/hardware-asset-validation-gate/: SKILL.md
.squad/skills/hardware-proof-gates/: SKILL.md
.squad/skills/migration-validation-gate/: SKILL.md
.squad/skills/offline-gif-asset-pipeline/: SKILL.md
.squad/skills/panel-contract-migration/: SKILL.md
.squad/skills/pico-sdk-scaffold/: SKILL.md
.squad/skills/project-conventions/: SKILL.md
.squad/skills/runtime-frame-seam/: SKILL.md
.squad/skills/split-proof-gates/: SKILL.md
.squad/skills/ws2812-pio-transport/: SKILL.md
docs/: PHASE_0_PROJECT_STRUCTURE.md  PHASE_1_HARDWARE_ABSTRACTION.md  PHASE_2_THREADING_MODEL.md  PHASE_3_ASSETS_AND_PLAYBACK.md  PHASE_4_CLEANUP.md  README.md
docs/migration/: README.md  feature-breakdown.md
docs/migration/features/: f1-foundation.md  f2-core-runtime.md  f3-assets-playback.md  f4-validation.md
gifs/animals/: kill_single2.gif.3
pico_build/: CMakeLists.txt  README.md  pico_sdk_import.cmake
pico_build/proof/: foundation-proof.md  hardware-boot-summary.txt  hardware-validation-run.txt
pico_build/src/firmware/: animation_registry.c  animation_registry.h  board.h  hw_led.h  hw_led_pio.c  main.c  ws2812.pio
pico_build/src/portable/: embedded_animation.c  embedded_animation.h  runtime_types.h  smoke_patterns.c  smoke_patterns.h  tasbot_layout.c  tasbot_layout.h
pico_build/tools/: collect-proof.ps1  generate-animation-registry.ps1  generate-gif-asset.ps1
